// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`esy solve LE "<1.5.0" for: 1.0.0, 1.5.0 1`] = `
"preamble: 
property: staleness: int, original-version: string

package: @esy-ocaml/substs
version: 1
conflicts: @esy-ocaml/substs
staleness: 0
original-version: 1.0.0

package: @opam/pkg
version: 1
depends: @esy-ocaml/substs
conflicts: @opam/pkg
staleness: 1
original-version: opam:1.0.0

package: root
version: 1
depends: @opam/pkg < 2
conflicts: root
staleness: 0
original-version: 0.0.0

request: 
install: root = 1"
`;

exports[`esy solve LE "<2.0.0" for: 1.0.0, 1.5.0 1`] = `
"preamble: 
property: staleness: int, original-version: string

package: @esy-ocaml/substs
version: 1
conflicts: @esy-ocaml/substs
staleness: 0
original-version: 1.0.0

package: @opam/pkg
version: 1
depends: @esy-ocaml/substs
conflicts: @opam/pkg
staleness: 2
original-version: opam:1.0.0

package: @opam/pkg
version: 2
depends: @esy-ocaml/substs
conflicts: @opam/pkg
staleness: 1
original-version: opam:1.5.0

package: root
version: 1
depends: @opam/pkg < 3
conflicts: root
staleness: 0
original-version: 0.0.0

request: 
install: root = 1"
`;

exports[`esy solve LE "1-3 || 6 - 9" 1`] = `
"preamble: 
property: staleness: int, original-version: string

package: @esy-ocaml/substs
version: 1
conflicts: @esy-ocaml/substs
staleness: 0
original-version: 1.0.0

package: @opam/pkg
version: 1
depends: @esy-ocaml/substs
conflicts: @opam/pkg
staleness: 8
original-version: opam:1.0.0

package: @opam/pkg
version: 2
depends: @esy-ocaml/substs
conflicts: @opam/pkg
staleness: 7
original-version: opam:2.0.0

package: @opam/pkg
version: 3
depends: @esy-ocaml/substs
conflicts: @opam/pkg
staleness: 6
original-version: opam:3.0.0

package: @opam/pkg
version: 5
depends: @esy-ocaml/substs
conflicts: @opam/pkg
staleness: 4
original-version: opam:6.0.0

package: @opam/pkg
version: 6
depends: @esy-ocaml/substs
conflicts: @opam/pkg
staleness: 3
original-version: opam:7.0.0

package: @opam/pkg
version: 7
depends: @esy-ocaml/substs
conflicts: @opam/pkg
staleness: 2
original-version: opam:8.0.0

package: @opam/pkg
version: 8
depends: @esy-ocaml/substs
conflicts: @opam/pkg
staleness: 1
original-version: opam:9.0.0

package: root
version: 1
depends: @opam/pkg >= 1 | @opam/pkg > 4 , @opam/pkg >= 1 | @opam/pkg < 9 , @opam/pkg <= 3 | @opam/pkg > 4 , @opam/pkg <= 3 | @opam/pkg < 9
conflicts: root
staleness: 0
original-version: 0.0.0

request: 
install: root = 1"
`;

exports[`esy solve dumps CUDF input & output to files on disk 1`] = `
"preamble: 
property: staleness: int, original-version: string

package: root
version: 1
conflicts: root
staleness: 0
original-version: 0.0.0

request: 
install: root = 1"
`;

exports[`esy solve dumps CUDF input & output to files on disk 2`] = `
"preamble: 
property: staleness: int, original-version: string

package: root
version: 1
conflicts: root
installed: true
original-version: 0.0.0
staleness: 0"
`;

exports[`esy solve dumps CUDF input & output to stdout 1`] = `
"preamble: 
property: staleness: int, original-version: string

package: root
version: 1
conflicts: root
staleness: 0
original-version: 0.0.0

request: 
install: root = 1
preamble: 
property: staleness: int, original-version: string

package: root
version: 1
conflicts: root
installed: true
original-version: 0.0.0
staleness: 0"
`;
